@@ -1,2 +1,4 @@
 # Dictionary_BigHW
 Dictionary Java OOP
+
+vm configuration: --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
